[project]
name = "langchain_prj"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
 "dotenv>=0.9.9",
 "langchain>=0.1.0",
 "langchain-classic>=1.0.0",
 "langchain-community>=0.4.1",
 "langchain-core>=0.1.23",
 "langchain-groq>=1.0.1",
 "langchain-ollama>=1.0.0",
 "langchain-openai>=0.0.6",
 "langchain-pinecone>=0.2.13",
 "langchain-tavily>=0.2.13",
 "pypdf>=6.3.0",
 "tavily>=1.1.0",
 "pydantic-ai>=0.1.0",
 "temporalio>=1.7.0",
 "langgraph>=1.0.3",
 "langsmith>=0.4.43",
]
